fixed access icons spacing

--- a/vis/stylesheets/modules/map/_papers.scss
+++ b/vis/stylesheets/modules/map/_papers.scss
@@ -319,3 +319,7 @@
         }
     }
 }
+
+.access_icon {
+    margin-left: 3px;
+}
